fix horizontal scrollbar problem

--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@ body{
 }
 .nav-item:hover{
     background-color: #e6e6e6;
-    color: black;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 
@@ -126,12 +126,7 @@ body{
 .black{
     color: black;
 }
-.gallery{
-    height: 100vh;
-    width: 100vw;
-    margin: 0;
-    padding: 0;
-}
+
 @media (max-width: 600px){
     .nav-list{
         display: none;
@@ -167,14 +162,38 @@ hr{
     color: black;
     width: 100%;
 }
-.gallery-container {
-    column-count: 3;
-    /* column-gap: .6em; */
+.gallery{
+    min-height: 100vh;
     width: 100%;
     margin: 0;
     padding: 0;
+    background-color: #5a5a5a;
+}
+.gallery-container {
+    column-count: 3;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding-top: 10rem;
+    text-align: center;
 }
 .item {
     
     width: 80%;
+}
+img{
+    margin: 0;
+    padding: 0;
+}
+
+@media(max-width: 1200px){
+    .gallery-container{
+        column-count: 2;
+    }
+}
+
+@media(max-width: 800px){
+    .gallery-container{
+        column-count: 1;
+    }
 }
